crates/aura-macros/tests/boundaries/capability_family_invalid_generated_name.rs
use aura_macros::capability_family;

#[capability_family(namespace = "chat")]
enum ChatCapability {
    #[capability("Message:Send")]
    MessageSend,
}

fn main() {}
